--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.1",
     "dompurify": "^3.3.1",
     "driver.js": "^1.4.0",
+    "echarts": "^6.0.0",
     "file-saver": "^2.0.5",
     "marked": "^17.0.1",
     "pinia": "^2.1.7",
@@ -28,6 +29,7 @@
     "vue": "^3.4.0",
     "vue-chartjs": "^5.3.0",
     "vue-draggable-plus": "^0.6.1",
+    "vue-echarts": "^8.0.1",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.2.5",
     "xlsx": "^0.18.5"
